[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/upheavtt_24.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/shop/tide_gauge.png" type="Texture" id=2]
[ext_resource path="res://scripts/SensorDisplay.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.462745, 0.462745, 0.462745, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.258824, 0.258824, 0.258824, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.258824, 0.258824, 0.258824, 1 )

[node name="SensorDisplayBG" type="ColorRect"]
margin_right = 400.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 150 )
color = Color( 0.85098, 0.85098, 0.85098, 1 )
script = ExtResource( 3 )

[node name="SensorsBG" type="ColorRect" parent="."]
margin_right = 400.0
margin_bottom = 150.0
color = Color( 0.85098, 0.85098, 0.85098, 1 )

[node name="Locked" type="Label" parent="SensorsBG"]
visible = false
margin_left = 130.0
margin_top = 20.0
margin_right = 203.0
margin_bottom = 59.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "LOCKED
"

[node name="Req" type="Label" parent="SensorsBG/Locked"]
margin_left = -106.0
margin_top = 19.0
margin_right = 146.0
margin_bottom = 58.0
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( 179.286, 22.1429 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "REQUIREMENT:
COMPLETE SHOP TUTORIAL"
align = 1

[node name="SensorName" type="Label" parent="SensorsBG"]
margin_left = 5.0
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.117647, 0, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Tide Gauge"

[node name="SensorInfo" type="Label" parent="SensorsBG/SensorName"]
margin_left = 5.33333
margin_top = 18.6667
margin_right = 342.333
margin_bottom = 120.667
rect_scale = Vector2( 0.5, 0.7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Used to measure the speed and 
height of the tide and other 
weather metrics."

[node name="InfoButton" type="Button" parent="SensorsBG/SensorName"]
margin_left = 6.0
margin_top = 73.0
margin_right = 214.0
margin_bottom = 108.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "More information"
icon_align = 1

[node name="BuyButton" type="Button" parent="SensorsBG/SensorName"]
margin_left = 118.667
margin_top = 73.0
margin_right = 221.667
margin_bottom = 108.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 1 )
text = "Buy: $$$"

[node name="SensorImage" type="TextureRect" parent="SensorsBG/SensorName"]
margin_left = 181.333
margin_top = 12.0
margin_right = 349.333
margin_bottom = 178.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[connection signal="pressed" from="SensorsBG/SensorName/InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="SensorsBG/SensorName/BuyButton" to="." method="_on_BuyButton_pressed"]
